--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
   justify-content: flex-end;
   align-items: center;
   padding-right:15px;
-  font-size:25px;
+  font-size:24px;
   font-weight:600;
 }
 
@@ -130,10 +130,11 @@
   padding-right:10px;
   margin:0px;
   opacity: 1;
+  line-height:40px;
 }
 
 /**responsive_check**/
-@media(max-width:742px) {
+@media(max-width:650px) {
   .left_menu {
     padding-bottom:15px;
   }
@@ -193,7 +194,7 @@ h2 {
 }
 
 .intro_LizNoir p {
-  font-size:18px;
+  font-size:20px;
 }
 
 .intro_LizNoir {
@@ -207,7 +208,7 @@ h2 {
 
 .intro_idolypride h3, .intro_idolypride p {
   font-family:"NanumSquare", sans-serif;
-  font-size:14px;
+  font-size:16px;
   margin:0px;
   padding:10px;
 }
@@ -342,6 +343,7 @@ h2 {
   padding-left:20px;
   color:white;
   font-size:15px;
+  word-break: keep-all;
 }
 
 .profile1 h3 {
@@ -353,20 +355,39 @@ h2 {
 }
 
 .profile1 h4 {
+  font-size: 18px;
   margin-top:2px;
   padding:4px;
   color:white;
+  font-family: sans-serif;
+}
+
+#ai .profile1, #ai .profile2,
+#ai h3, #ai h4,
+#kokoro .profile1, #kokoro .profile2,
+#kokoro h3, #kokoro h4 {
+  color:#2c2839;
+}
+
+#ai h3, #kokoro h3  {
+  border-bottom: 3px solid #2c2839;
 }
 
 .profile2 dl {
   display: table;
   width: 100%;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .profile2 dt, dd {
   padding-bottom: 7px;
   border-bottom: 1px solid white;
+}
+
+#ai .profile2 dt, #ai .profile2 dd,
+#kokoro .profile2 dt, #kokoro .profile2 dd  {
+  padding-bottom: 7px;
+  border-bottom: 1px solid #2c2839;
 }
 
 .profile2 dt {
@@ -405,7 +426,7 @@ h2 {
     padding-top:0px;
     padding-bottom:0px;
     color:white;
-    font-size:15px;
+    font-size:16px;
   }
 
   .img {
@@ -448,7 +469,7 @@ h2 {
 }
 
 .release_date, .prize, .catalog {
-  font-size:15px;
+  font-size:16px;
 }
 
 .tracklist {
@@ -459,8 +480,9 @@ h2 {
 
 .comment
  {
-  font-size:12px;
+  font-size:14px;
   padding-right:20%;
+  padding-bottom: 50px;
 }
 
 .category {
@@ -579,6 +601,58 @@ h2 {
     padding-top: 10px;
     padding-bottom:50px;
     font-size:20px;
+  }
+
+}
+
+
+
+
+
+/**section: Sign Up**/
+
+.sign_up {
+  display:block;
+  align-content: center;
+  margin-top:10%;
+}
+
+.sign_up p {
+  font-family: 'NanumSquare', sans-serif;
+  text-align: center;
+  word-break: keep-all;
+  font-size:40px;
+  margin:30px;
+  padding:30px;
+  color:#2c2839;
+}
+
+.sign_up button {
+  display: block;
+  align-content: center;
+  padding:0px;
+  border-radius: 20px;
+  font-family:"NanumSquareRound", sans-serif;
+  font-weight:500;
+  color:white;
+  background-color: #2c2839;
+  font-size: 50px;
+  text-align: center;
+  padding:20px;
+  width:30%;
+  margin:auto;
+  margin-bottom:10%;
+}
+
+@media(max-width:816px) {
+  .sign_up p {
+    font-size:24px;
+  }
+
+  .sign_up button {
+    width:50%;
+    font-size:24px;
+    margin-bottom:20%;
   }
 
 }
